--- a/03.Suite.tex
+++ b/03.Suite.tex
@@ -6,7 +6,7 @@
 		En la Suite para Piano Op. 25, Schoenberg escoge su serie $\sigma$ para resaltar el intervalo de tritono (6 semitonos). A continuación se observan en negrita los intervalos entre las notas de esta serie, en unidad de semitono:
 		
 		\vspace{-0.5cm}
-		\begin{footnotesize}	$$\left(\begin{matrix}0&&1&&2&&3&&4&&5&&6&&7&&8&&9&&10&&11&\\4&\mathbf{1}&5&\mathbf{2}&7&\mathbf{6}&1&\mathbf{5}&6&\mathbf{9}&3&\mathbf{5}&8&\mathbf{6}&2&\mathbf{9}&11&\mathbf{1}&0&\mathbf{9}&9&\mathbf{1}&10&\mathbf{6}\end{matrix}\right)$$		
+		\begin{footnotesize}	\[\left(\begin{matrix}0&&1&&2&&3&&4&&5&&6&&7&&8&&9&&10&&11&\\4&\mathbf{1}&5&\mathbf{2}&7&\mathbf{6}&1&\mathbf{5}&6&\mathbf{9}&3&\mathbf{5}&8&\mathbf{6}&2&\mathbf{9}&11&\mathbf{1}&0&\mathbf{9}&9&\mathbf{1}&10&\mathbf{6}\end{matrix}\right)\]		
 		\end{footnotesize}\vspace{-0.5cm}
 				
 		Presenta repeticiones triples de los intervalos de tritono (6), de sexta mayor (9) y de segunda menor o semitono (1): los intervalos más disonantes; una repetición doble de cuarta justa (5), y un intervalo de segunda mayor (2); además de una consecución de intervalos repetida: 9 -- 1 -- 9 -- 1. Como se forma el intervalo de tritono al enlazar la serie original con una serie que empiece por la misma nota, se tiene en cuenta el intervalo de tritono (6) al final. En el dodecafonismo se evitan deliberadamente los intervalos de tercera mayor (4), ya que estos son la base de la eludida armonía tonal. \label{serie25}
@@ -43,6 +43,6 @@
 		Por tanto, es muy complicado analizar esta obra en su totalidad, ya que la flexibilidad en la ordenación de los tetracordios puede generar situaciones muy ambiguas. Debido a estas fragmentaciones y a las variadas combinaciones de tetracordios originales y retrógrados, se escucha un área de desarrollo hacia la sección media del movimiento. En cambio, las series al principio y al final de la pieza se presentan casi íntegramente, como una exposición y reexposición. He aquí un vínculo con la simetría de las formas binarias tonales. \cite{clercq}
 		
 		Es más, incluso el orden de las series utilizadas en la primera y en la última sección coinciden, exceptuando dos repeticiones consecutivas y las series T$^0$ finales, que actúan como una cadencia serial:
-		$$\begin{matrix}\mathbf{c}.\mathbf{1}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\text{I}&\text{T}^6&\begin{matrix}\text{IT}^6&\text{IT}^6\\\end{matrix}&&&\mathbf{c}.\mathbf{9}\\\mathbf{c}.\mathbf{22}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\begin{matrix}\text{I}&\text{I}\\\end{matrix}&\text{T}^6&\text{IT}^6&\text{T}^0&\text{T}^0&\mathbf{c}.\mathbf{31}\\\end{matrix}$$
+		\[\begin{matrix}\mathbf{c}.\mathbf{1}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\text{I}&\text{T}^6&\begin{matrix}\text{IT}^6&\text{IT}^6\\\end{matrix}&&&\mathbf{c}.\mathbf{9}\\\mathbf{c}.\mathbf{22}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\begin{matrix}\text{I}&\text{I}\\\end{matrix}&\text{T}^6&\text{IT}^6&\text{T}^0&\text{T}^0&\mathbf{c}.\mathbf{31}\\\end{matrix}\]
 		
 		En el Anexo \ref{app:score}, página \pageref{app:score}, se encuentra el análisis serial completo de la Musette.
