--- a/04.Grupo.tex
+++ b/04.Grupo.tex
@@ -4,11 +4,11 @@
 		Las fórmulas de las transformaciones del apartado \ref{transPsi} quedaron de esta manera:
 		\vspace{-0.9cm}
 		\begin{multicols}{3}
-			$$\text{T}^\text{k}(\sigma(m)) = \sigma(m) + \text{k}$$
+			\[\text{T}^\text{k}(\sigma(m)) = \sigma(m) + \text{k}\]
 			
-			$$\text{R}(\sigma(m)) = \sigma(-1-m)$$
+			\[\text{R}(\sigma(m)) = \sigma(-1-m)\]
 			
-			$$\text{I}(\sigma(m)) = -\sigma(m) + 2\sigma(0)$$
+			\[\text{I}(\sigma(m)) = -\sigma(m) + 2\sigma(0)\]
 		\end{multicols} \vspace{-0.3cm}
 		
 		Sin embargo, la importancia de estas definiciones radica en qué espectro serial forman, y no en cómo se nombra cada serie específica. No es distinguible a un nivel musical y, de hecho, hay más de un convenio para ello.
@@ -26,20 +26,20 @@
 		Así quedan dos transformaciones que se asemejan a reflexiones: una por \textit{dentro} y otra por \textit{fuera}; y una adición por \textit{fuera}. Aquí \textit{dentro} significa \textit{antes} de aplicar $\sigma$ y \textit{fuera} significa \textit{después} de aplicar $\sigma$, ya que no se debe olvidar que $\sigma$, la permutación, es una función en sí misma. Y ahora surge una cuestión consecuentemente: ¿cuál sería entonces el resultado de sumar \textit{dentro}, es decir, \textit{antes}?
 		
 		Esta nueva transformación, cuya aparición resulta natural tras las otras tres, se llama \textit{desplazamiento cíclico}. Inventada y usada tan solo por Alban Berg, y en algunas obras primerizas de Schoenberg, C$^\text{k}$ desplaza el comienzo de la serie k posiciones más allá: $\text{C}^\text{k}\left(\sigma\left(m\right)\right)=\sigma\left(m+\text{k}\right)$.
-		$$\text{C}^\text{k}=\left(\begin{matrix}0&1&2&&9&10&11\\\sigma\left(\text{k}\right)&\sigma\left(\text{k}+1\right)&\sigma\left(\text{k}+2\right)&\cdots&\sigma\left(\text{k}+9\right)&\sigma\left(\text{k}+10\right)&\sigma\left(\text{k}+11\right)\\\end{matrix}\right)$$
+		\[\text{C}^\text{k}=\left(\begin{matrix}0&1&2&&9&10&11\\\sigma\left(\text{k}\right)&\sigma\left(\text{k}+1\right)&\sigma\left(\text{k}+2\right)&\cdots&\sigma\left(\text{k}+9\right)&\sigma\left(\text{k}+10\right)&\sigma\left(\text{k}+11\right)\\\end{matrix}\right)\]
 		
 		La serie 4-cíclica sobre la permutación P de la Suite Op. 25 es la siguiente serie C$^4$:	
-		$$\text{C}^4=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\6&3&8&2&11&0&9&10&4&5&7&1\\\end{matrix}\right)$$		
+		\[\text{C}^4=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\6&3&8&2&11&0&9&10&4&5&7&1\\\end{matrix}\right)\]		
 		\includegraphics[width=\textwidth]{13.png}
 		
 		En resumen, se puede trabajar con un nuevo sistema de definiciones que mantienen el significado musical del serialismo pero varían la notación con la que se trabaja. 
 		\vspace{-0.5cm}
 		\begin{multicols}{2}
-		$$\text{S}(\sigma(m)) = -\sigma(m)$$
-		$$\text{T}^\text{k}(\sigma(m)) = \sigma(m) + \text{k}$$
+		\[\text{S}(\sigma(m)) = -\sigma(m)\]
+		\[\text{T}^\text{k}(\sigma(m)) = \sigma(m) + \text{k}\]
 		
-		$$\text{V}(\sigma(m)) = \sigma(-m)$$
-		$$\text{C}^\text{k}(\sigma(m))=\sigma(m+\text{k})$$
+		\[\text{V}(\sigma(m)) = \sigma(-m)\]
+		\[\text{C}^\text{k}(\sigma(m))=\sigma(m+\text{k})\]
 		\end{multicols}
 		
 		\newpage
@@ -265,9 +265,9 @@
 		
 		Los únicos casos en los que podrían conmutar ocurrirían cuando $2\sigma\left(0\right)\equiv2\sigma(-1)$ (mod. 12): $12+2\sigma\left(0\right)=2\sigma\left(-1\right)\implies\ 6+\sigma\left(0\right)=\sigma\left(-1\right)\implies \sigma\left(-1\right)-\sigma\left(0\right)=6$. Es decir, cuando la primera y la última nota de la serie original se distancian en 6 semitonos, como es el caso de la permutación en la Suite Op. 25:
 		
-		$$
+		\[
 		\text{IR}=\text{RI}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&8&9&6&0&5&2&7&1&3&4\\\end{matrix}\right)
-		$$	
+		\]	
 		
 		\includegraphics[width=\textwidth]{5.png}\\
 		
