--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -14,8 +14,8 @@
     \section{Obra de Schoenberg}
    
    	Tomando la música debussiana y las músicas orientales como referencia, he escogido la escala pentatónica para aplicarla a la Musette de la Suite para piano Op. 25 de Schoenberg. Para relacionar la escala dodecafónica con la nueva escala, se debe crear una función que relacione las notas de ambos conjuntos. Yo he tomado esta función:
-   	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala pentatónica:}&0&0&2&2&4&4&7&7&7&9&9&0\\\end{matrix}\right.$$
-   	$$\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Mi}&\text{Sol}&\text{Sol}&\text{Sol}&\text{La}&\text{La}&\text{Do}\\\end{matrix}\right.$$
+   	\[\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala pentatónica:}&0&0&2&2&4&4&7&7&7&9&9&0\\\end{matrix}\right.\]
+   	\[\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Mi}&\text{Sol}&\text{Sol}&\text{Sol}&\text{La}&\text{La}&\text{Do}\\\end{matrix}\right.\]
    	
    	Se puede observar que, ya que 5 no es divisor de 12, no hay una repartición equitativa, por lo que en cada serie habrá notas que aparezcan más que otras. En mi función, las notas repetidas son el Do (nota 0) y el Sol (nota 7). Además, estas notas forman el bordón de la Musette, por lo que tendrá aspecto sonoro de Do Mayor. En el Anexo , página  se encuentra la partitura de la modificación pentatónica, sin incluir las dinámicas por cuestión de simplificación, y en la pista 2 se encuentra la grabación de la misma, creada con el programa Musescore.
    	
@@ -24,12 +24,12 @@
    	Sin embargo, he hecho una prueba sobre la primera sección de la Musette con una única función de la escala hexafónica y otra de la heptafónica, para así justificar mi elección de la escala pentatónica como la mejor entre las tres.
    	
    	Con la escala hexafónica habría una repartición equitativa en la función, por lo que la obra seguiría siendo estrictamente serialista y ninguna nota sobresaldría. El problema de esta escala es que tampoco suena natural al oído, como se puede comprobar en la pista 3 (partitura en el Anexo , página ), que es la modificación hexafónica de la primera sección de la Musette con la siguiente función:
-   	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala hexafónica:}&0&0&2&2&4&4&6&6&8&8&10&10\\\end{matrix}\right.$$
-   	$$\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Mi}&\text{Fa\#}&\text{Fa\#}&\text{Sol\#}&\text{Sol\#}&\text{La\#}&\text{La\#}\\\end{matrix}\right.$$
+   	\[\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala hexafónica:}&0&0&2&2&4&4&6&6&8&8&10&10\\\end{matrix}\right.\]
+   	\[\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Mi}&\text{Fa\#}&\text{Fa\#}&\text{Sol\#}&\text{Sol\#}&\text{La\#}&\text{La\#}\\\end{matrix}\right.\]
    	
    	Por último, la escala heptafónica tiene el problema de contener dos intervalos de semitono, por lo que la obra modificada suena también disonante. Esto se muestra en la pista 4 (partitura en el Anexo , página ), que es la modificación heptafónica de la primera sección de la Musette con la siguiente función:
-   	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala heptafónica:}&0&0&2&2&4&5&5&7&7&9&9&11\\\end{matrix}\right.$$
-   	$$\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Fa}&\text{Fa}&\text{Sol}&\text{Sol}&\text{La}&\text{La}&\text{Si}\\\end{matrix}\right.$$	
+   	\[\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala heptafónica:}&0&0&2&2&4&5&5&7&7&9&9&11\\\end{matrix}\right.\]
+   	\[\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Fa}&\text{Fa}&\text{Sol}&\text{Sol}&\text{La}&\text{La}&\text{Si}\\\end{matrix}\right.\]	
    
     \section{Obras de Berg}
     \section{Obras de Webern}
