--- a/02.Dodecafonismo.tex
+++ b/02.Dodecafonismo.tex
@@ -15,13 +15,13 @@
 		Los dos primeros postulados expresan que una obra dodecafónica fundamenta su estructura sobre una permutación de la escala de doce semitonos. Dicha permutación $\sigma$ es una biyección del conjunto numerado de las doce notas \{Do = 0, Do\# = 1, Re = 2, Re\# = 3, Mi = 4, Fa = 5, F\# = 6, Sol = 7, Sol\# = 8, La = 9, La\# = 10, Si = 11\} consigo mismo, y se representa de esta forma:
 		
 		\begin{footnotesize}
-			$$
+			\[
 			\sigma=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\\sigma(0)&\sigma(1)&\sigma(2)&\sigma(3)&\sigma(4)&\sigma(5)&\sigma(6)&\sigma(7)&\sigma(8)&\sigma(9)&\sigma(10)&\sigma(11)\\\end{matrix}\right)
-			$$
+			\]
 		\end{footnotesize}	
 	
 		La permutación $\sigma(m)$, con $m\in \mathbb{Z} / (12)$\footnote{$\mathbb{Z} / (12)=\{0,\ 1,\ 2,\ 3,\ 4,\ 5,\ 6,\ 7,\ 8,\ 9,\ 10,\ 11\}$}, pertenece al grupo simétrico de orden 12: $\sigma\in$ S$_{12}$. Por ejemplo, en la Suite para piano Op. 25 Schoenberg utiliza como serie original en todos los movimientos de la obra la siguiente permutación $\sigma$:
-		$$\sigma=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&7&1&6&3&8&2&11&0&9&10\\\end{matrix}\right)$$	
+		\[\sigma=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&7&1&6&3&8&2&11&0&9&10\\\end{matrix}\right)\]	
 		\includegraphics[width=\textwidth]{1.png}
 		
 		\emph{3. La serie será expuesta en cualquiera de sus aspectos lineales: original, inversión, retrogradación de la original y retrogradación de la inversión.}
@@ -38,48 +38,48 @@
 		La \emph{transposición}, mencionada en el cuarto postulado, consiste en subir o bajar la serie original un número determinado de semitonos. Por tanto, no se modifican los intervalos entre las notas, sino solamente la altura a la que está la serie. Ya que consideraremos todas las octavas equivalentes, debemos trabajar módulo 12. 
 		
 		La serie transportada k semitonos, T$^\text{k}\left(\sigma\right)$, se construye sumando k a $\sigma$ (mod. 12):
-		$$
+		\[
 		\forall m\in \mathbb{Z} / (12):	\text{T}^\text{k}\left(\sigma\left(m\right)\right)=\sigma\left(m\right)+\text{k} \qquad \text{con k constante;}
-		$$		
-		$$
+		\]		
+		\[
 		\text{T}^\text{k}=\left(\begin{matrix}0&1&2&&9&10&11\\\sigma\left(0\right)+\text{k}&\sigma\left(1\right)+\text{k}&\sigma\left(2\right)+\text{k}&\cdots&\sigma\left(9\right)+\text{k}&\sigma\left(10\right)+\text{k}&\sigma\left(11\right)+\text{k}\\\end{matrix}\right)
-		$$
+		\]
 		
 		A su vez, T$^\text{k}$ se forma al componer k transposiciones de 1 semitono: $\text{T}^\text{k}=\text{T}^1\circ\text{T}^1\circ\ldots\circ\text{T}^1$, k veces. Debido a que k es en realidad el exponente en la potencia de T, se coloca este número como superíndice.
 		
 		Históricamente, la notación $\Psi_\text{k}$, $\Psi^\text{k}$ o $\Psi(\text{k})$ se ha usado en sustitución de la composición de la transposición T$^\text{k}$ y otra función $\Psi$, en el respectivo orden: $\Psi^\text{k}=\Psi \circ \text{T}^\text{k} = \Psi(\text{T}^\text{k})$. Sin embargo, esta notación es especialmente ambigua y confusa. Por ello, es preferible ceñirse a la notación estrictamente matemática; es decir, a la composición de funciones, aun omitiendo $\circ$: \cancel{$\Psi_\text{k}$}, \cancel{$\Psi^\text{k}$}, \cancel{$\Psi(\text{k})$} $\rightarrow \Psi\text{T}^\text{k}$
 		
 		Una posible serie transportada sobre la permutación $\sigma$ de la Suite para piano Op. 25, con k $= 6$, es la siguiente serie T$^6$:
-		$$\text{T}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&1&7&0&9&2&8&5&6&3&4\\\end{matrix}\right)$$	
+		\[\text{T}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&1&7&0&9&2&8&5&6&3&4\\\end{matrix}\right)\]	
 		\includegraphics[width=\textwidth]{2.png}
 		
 	\subsection{Retrogradación}
 		La \emph{retrogradación} consiste en leer la serie original desde la nota final hacia atrás, es decir, aplicar a la serie una simetría especular. De este modo, la primera nota irá al último puesto, la segunda al penúltimo, y así sucesivamente.
 		
 		La serie retrógrada se construye de esta forma:
-		$$
-		\forall m\in \mathbb{Z} / (12):	\text{R}\left(\sigma\left(m\right)\right)=\sigma\left(-1-m\right)$$ \begin{footnotesize}$$			\text{R}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\	\sigma(11)&\sigma(10)&\sigma(9)&\sigma(8)&\sigma(7)&\sigma(6)&\sigma(5)&\sigma(4)&\sigma(3)&\sigma(2)&\sigma(1)&\sigma(0)\\\end{matrix}\right)
-			$$\end{footnotesize}
+		\[
+		\forall m\in \mathbb{Z} / (12):	\text{R}\left(\sigma\left(m\right)\right)=\sigma\left(-1-m\right)\] \begin{footnotesize}\[			\text{R}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\	\sigma(11)&\sigma(10)&\sigma(9)&\sigma(8)&\sigma(7)&\sigma(6)&\sigma(5)&\sigma(4)&\sigma(3)&\sigma(2)&\sigma(1)&\sigma(0)\\\end{matrix}\right)
+			\]\end{footnotesize}
 			
 		La serie retrógrada sobre la permutación $\sigma$ de la Suite Op. 25 es la siguiente serie R:	
-		$$\text{R}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&0&11&2&8&3&6&1&7&5&4\\\end{matrix}\right)$$		
+		\[\text{R}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&0&11&2&8&3&6&1&7&5&4\\\end{matrix}\right)\]		
 		\includegraphics[width=\textwidth]{3.png}
 		
 	\subsection{Inversión}
 		La \emph{inversión} consiste en cambiar la dirección --de ascendente a descendente, y viceversa-- de los intervalos entre cada nota de la serie. Si el primer intervalo en la serie original $\sigma$ es de $+k$, el primer intervalo en la serie invertida I será de $-k$ (mod. 12), por lo que debemos cambiar el signo de $\sigma$ para construir I. Además, queremos que la primera nota de ambas series, I(0) y $\sigma$(0), coincidan, así que debemos transportar la serie ($-\sigma$) un número $\lambda$ de semitonos para que esta condición se cumpla:
-		$$\text{I}(0)=-\sigma\left(0\right)+\lambda=\sigma\left(0\right)\implies \lambda=2\sigma(0)$$
+		\[\text{I}(0)=-\sigma\left(0\right)+\lambda=\sigma\left(0\right)\implies \lambda=2\sigma(0)\]
 		Por tanto, la serie invertida se construye de esta forma:
-		$$
+		\[
 		\forall m\in \mathbb{Z} / (12):	\text{I}\left(\sigma\left(m\right)\right)=-\sigma\left(m\right)+2\sigma\left(0\right)
-		$$
-		\begin{footnotesize}	$$
+		\]
+		\begin{footnotesize}	\[
 		\text{I}=\left(\begin{matrix}0&1&2&&10&11\\\sigma(0)&-\sigma(1)+2\sigma(0)&-\sigma(2)+2\sigma(0)&\ldots&-\sigma(10)+2\sigma(0)&-\sigma(11)+2\sigma(0)\\\end{matrix}\right)
-		$$	\end{footnotesize}
+		\]	\end{footnotesize}
 		
 		La serie invertida sobre la permutación $\sigma$ de la Suite Op. 25 es la siguiente serie I:
-		$$
+		\[
 		\text{I}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&1&7&2&5&0&6&9&8&11&10\\\end{matrix}\right)
-		$$		
+		\]		
 		\includegraphics[width=\textwidth]{4.png}
 				
 		En total, obtendremos 48 series -- aunque no obligatoriamente distintas entre sí -- pertenecientes a un solo espectro serial. Hay 12 series originales sobre cada una de las doce notas, 12 series retrógradas, 12 invertidas y 12 series sobre las que se aplica tanto la retrogradación como la inversión. A continuación se muestra la sintaxis simple junto a la matemática:
@@ -116,8 +116,9 @@
 		
 		He creado un programa que devuelve en formato \LaTeX{} la matriz correspondiente a cualquier serie dodecafónica que se introduzca en teclado, además de producir la nomenclatura simple para cada serie. El código, escrito en C++, está incluido en el Anexo \ref{app:matrices}, página \pageref{app:matrices}, y está creado en base a las fórmulas de construcción de series y a la propiedad de invariancia de intervalos en las transportaciones.
 		
-		A continuación, se incluye la matriz dodecafónica de la serie P de la Suite Op. 25 de Schoenberg. Mientras que la mayoría de tablas tienen dos filas inferiores, que se corresponden con las distintas nomenclaturas de RI e IR para una misma serie – ya que normalmente no conmutan –, en la matriz de la serie P sí coinciden, como se mencionará en el apartado \ref{conmut}, por lo que solamente se incluye una de las dos.		
-		$$\begin{array}{l|cccccccccccc|r}
+		A continuación, se incluye la matriz dodecafónica de la serie P de la Suite Op. 25 de Schoenberg. Mientras que la mayoría de tablas tienen dos filas inferiores, que se corresponden con las distintas nomenclaturas de RI e IR para una misma serie – ya que normalmente no conmutan –, en la matriz de la serie P sí coinciden, como se mencionará en el apartado \ref{conmut}, por lo que solamente se incluye una de las dos.	
+		
+		\[\begin{array}{l|cccccccccccc|r}
 		&\text{I}_{0}&\text{I}_{1}&\text{I}_{3}&\text{I}_{9}&\text{I}_{2}&\text{I}_{11}&\text{I}_{4}&\text{I}_{10}&\text{I}_{7}&\text{I}_{8}&\text{I}_{5}&\text{I}_{6}&\\
 		\hline
 		\text{T}_{0}&4&5&7&1&6&3&8&2&11&0&9&10&\text{R}_{0}\\
@@ -133,8 +134,10 @@
 		\text{T}_{7}&11&0&2&8&1&10&3&9&6&7&4&5&\text{R}_{7}\\
 		\text{T}_{6}&10&11&1&7&0&9&2&8&5&6&3&4&\text{R}_{6}\\
 		\hline
-		&\text{IR}_{0}&\text{IR}_{1}&\text{IR}_{3}&\text{IR}_{9}&\text{IR}_{2}&\text{IR}_{11}&\text{IR}_{4}&\text{IR}_{10}&\text{IR}_{7}&\text{IR}_{8}&\text{IR}_{5}&\text{IR}_{6}&
-		\end{array}$$
+		&\text{IR}_{0}&\text{IR}_{1}&\text{IR}_{3}&\text{IR}_{9}&\text{IR}_{2}&\text{IR}_{11}&\text{IR}_{4}&\text{IR}_{10}&\text{IR}_{7}&\text{IR}_{8}&\text{IR}_{5}&\text{IR}_{6}&\\
+		\hline
+		&\text{RI}_{0}&\text{RI}_{1}&\text{RI}_{3}&\text{RI}_{9}&\text{RI}_{2}&\text{RI}_{11}&\text{RI}_{4}&\text{RI}_{10}&\text{RI}_{7}&\text{RI}_{8}&\text{RI}_{5}&\text{RI}_{6}&
+		\end{array}\]
 		
 		También he creado una página interactiva que genera matrices de cualquier serie para cualquier longitud serial, además de generar series aleatorias. Permite escoger entre dos numeraciones y dos nomenclaturas. Está escrita en Elm y el código puede encontrarse en \textit{https://gitlab.com/dodecafonismo/matrices}.
 		
